# cesi-clean-code-kata

./: README.md  pyproject.toml
tests/: test_checker.py  test_checker_refactored.py
tictactoe_checker/: checker.py  checker_refactored.py
