[tool.poetry]
name = "tictactoe-checker"
version = "0.1.0"
description = ""
authors = ["Charly Laurent <charly.laurent@mergify.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
